@@ -1,9 +1,11 @@
 from Products.CMFCore.URLTool import URLTool as BaseTool
+from Products.CMFCore.utils import getToolByName
 from AccessControl import ClassSecurityInfo
 from App.class_init import InitializeClass
 from Products.CMFPlone.PloneBaseTool import PloneBaseTool
 
-from urlparse import urlparse
+from posixpath import normpath
+from urlparse import urlparse, urljoin
 
 
 class URLTool(PloneBaseTool, BaseTool):
@@ -20,46 +22,51 @@ class URLTool(PloneBaseTool, BaseTool):
             if context is passed in to allow for url parsing. When context is
             not provided, assume that relative urls are in the portal. It is
             assumed that http://portal is the same portal as https://portal.
+            
+            External sites listed in 'allow_external_login_sites' of
+            site_properties are also considered within the portal to allow for
+            single sign on.
         """
         p_url = self()
-        portal_path = urlparse(p_url)[0:3]
-        url_path = urlparse(url)[0:3]
-        p = {#'protocol':portal_path[0],
-             'host':portal_path[1],
-             'path':portal_path[2]}
-        u = {#'protocol':url_path[0],
-             'host':url_path[1],
-             'path':url_path[2]}
-        # check for urls without protocol (i.e. relative urls), or urls with
-        # the same host and path.
         
-        if not u['host'] and not u['path'].startswith('/'): #relatively relative url!
-            #url is a relative path that needs to be checked. URLs that start with / can be quickly checked
-            #urls that start with ../ need to have a bit of traversal
-            if u['path'].startswith('.'):
-                if context is None:
-                    return True #old behavior
-                else: #gentlemen, start your parsing engines
-                    if not context.isPrincipiaFolderish:
-                        useurl = context.aq_parent.absolute_url()
-                    else:
-                        useurl = context.absolute_url()
-                    currpath = urlparse(useurl)[2].split('/') #just the path
-                    for node in u['path'].split('/'): #path is something like "../../target"
-                        if node == '..':
-                            if currpath:
-                                currpath.pop()
-                            else: #we have more ../ than in the current context, we can't be in the portal
-                                return False
-                        elif node == '.':
-                            continue
-                        else: #We shouldn't have to deal with crazy urls like ../../somefolder/../otherfolder/../content
-                            #add the current node to give us a bit more breathing room, in case somone was silly and used the name of the portal in the relative path
-                            return ('/'.join(currpath)+'/'+node).startswith(p['path']) 
-            else: #url is in the form: path/to/another/object.jpg
-                return True 
+        _, u_host, u_path, _, _, _ = urlparse(url)
+        if not u_host and not u_path.startswith('/'):
+            if context is None:
+                return True #old behavior
+            if not context.isPrincipiaFolderish:
+                useurl = context.aq_parent.absolute_url()
+            else:
+                useurl = context.absolute_url()
         else:
-            return (p['host'] == u['host'] or not u['host']) and u['path'].startswith(p['path'])
+            useurl = p_url # when u_path.startswith('/')
+        if not useurl.endswith('/'):
+            useurl += '/'
+        
+        # urljoin to current url to get an absolute path
+        _, u_host, u_path, _, _, _ = urlparse(urljoin(useurl, url))
+        
+        # normalise to end with a '/' so /foobar is not considered within /foo
+        if not u_path:
+            u_path = '/'
+        else:
+            u_path = normpath(u_path)
+            if not u_path.endswith('/'):
+                u_path += '/'
+        _, host, path, _, _, _ = urlparse(p_url)
+        if not path.endswith('/'):
+            path += '/'
+        if host == u_host and u_path.startswith(path):
+            return True
+        
+        props = getToolByName(context, 'portal_properties').site_properties
+        for external_site in props.getProperty('allow_external_login_sites', []):
+            _, host, path, _, _, _ = urlparse(external_site)
+            if not path.endswith('/'):
+                path += '/'
+            if host == u_host and u_path.startswith(path):
+                return True
+        return False
+
 
 URLTool.__doc__ = BaseTool.__doc__
 
